# aprs

./: .gitignore  Cargo.toml  LICENSE-MIT  optimized_build.nu
.github/workflows/: ci.yaml
aprs/: Cargo.toml
aprs-client/: Cargo.toml
aprs-client/src/: client.rs
aprs-pickle/: Cargo.toml
aprs-pickle/src/: dispatch.rs  lib.rs  op.rs
aprs-proto/: Cargo.toml
aprs-proto/src/: client.rs  common.rs  deserialize.rs  lib.rs  primitives.rs  server.rs
aprs-proto/src/client/: bounce.rs  connect.rs  get.rs  get_data_package.rs  location_checks.rs  location_scouts.rs  say.rs  set.rs  set_notify.rs  status_update.rs  sync.rs
aprs-proto/src/common/: network_version.rs
aprs-proto/src/primitives/: connect_name.rs  game_name.rs  item_id.rs  location_id.rs  slot_id.rs  slot_name.rs  team_id.rs
aprs-proto/src/server/: bounced.rs  connected.rs  data_package.rs  game_data.rs  hashed_game_data.rs  invalid_packet.rs  location_info.rs  network_item.rs  network_player.rs  network_slot.rs  permissions.rs  print_json.rs  received_items.rs  retrieved.rs  room_info.rs  room_update.rs  set_reply.rs  slot_type.rs  time.rs
aprs-server/: Cargo.toml
aprs-server-core/: Cargo.toml
aprs-server-core/src/: bounce_matches.rs  data_storage.rs  lib.rs  traits.rs
aprs-server-core/src/traits/: get_game.rs  get_slot_id.rs  get_team_id.rs  has_tag.rs
aprs-server/src/: cli.rs  config.rs  game.rs  lib.rs  main.rs  net.rs  server.rs  websocket.rs  websocket_server.rs
aprs-server/src/net/: accept.rs  bind.rs  bind_addr.rs  client_addr.rs  listener.rs  stream.rs  tcp_addr.rs  unix_addr.rs
aprs-server/src/server/: client.rs  client_id.rs  config.rs  control.rs  event.rs  event_handlers.rs  server_handle.rs  state.rs
aprs-test/: Cargo.toml
aprs-test/src/: lib.rs  test_client.rs  test_server.rs
aprs-tools/: Cargo.toml
aprs-tools/src/: lib.rs  main.rs  slot_data.rs  slot_info.rs
aprs-utils/: Cargo.toml
aprs-utils/src/: lib.rs
aprs-value/: Cargo.toml  test_eval.py
aprs-value/src/: bool.rs  callable.rs  deserialize.rs  deserializer.rs  dict.rs  float.rs  int.rs  lib.rs  list.rs  serialize.rs  set.rs  str.rs  tuple.rs  value.rs
aprs-value/src/value/: tests.rs
aprs-web-host/: .env  .gitignore  Cargo.toml  diesel.toml  schema.patch
aprs-web-host/migrations/2026-02-27-231811-0000_create_users/: up.sql
aprs-web-host/src/: cli.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
aprs-web-host/src/models/: room.rs  user.rs  uuid.rs
aprs-web-host/src/routes/: host.rs  index.rs
aprs-web-host/templates/: host.html  index.html
aprs/src/: lib.rs  main.rs
src/: cli.rs  config.rs  game.rs  lib.rs  main.rs  pickle.rs  proto.rs  server.rs  web_socket_server.rs  websocket_server.rs
src/game/: multidata.rs
src/pickle/: dispatch.rs  value.rs
src/pickle/value/: big_int.rs  bool.rs  callable.rs  deserialize.rs  deserializer.rs  dict.rs  float.rs  int.rs  list.rs  none.rs  number.rs  number_cache.rs  rw_arc.rs  rw_gc.rs  serde_error.rs  serialize.rs  set.rs  storage.rs  str.rs  traced.rs  tuple.rs
src/proto/: client.rs  common.rs  server.rs
src/proto/client/: bounce.rs  connect.rs  get_data_package.rs  location_checks.rs  location_scouts.rs  set.rs  set_notify.rs  sync.rs
src/proto/server/: bounced.rs  connected.rs  connection_refused.rs  data_package.rs  location_info.rs  message_sink.rs  message_stream.rs  network_item.rs  network_player.rs  network_version.rs  permissions.rs  print_json.rs  received_items.rs  retrieved.rs  room_info.rs  room_update.rs  set_reply.rs  sha1.rs  time.rs
src/server/: client.rs  config.rs  event.rs  event_handlers.rs  state.rs
src/websocket_server/: config.rs
