[workspace]
members = ["aprs", "aprs-*"]
resolver = "3"

[workspace.dependencies]
aprs-client = { path = "aprs-client" }
aprs-pickle = { path = "aprs-pickle" }
aprs-proto = { path = "aprs-proto" }
aprs-server = { path = "aprs-server" }
aprs-server-core = { path = "aprs-server-core" }
aprs-value = { path = "aprs-value" }
bitflags = "2.10.0"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
eyre = "0.6.12"
fnv = "1.0.7"
futures = "0.3.31"
hashers = "1.0.1"
hex = "0.4.3"
indexmap = { version = "2.12.0", features = ["serde"] }
itertools = "0.14.0"
num = "0.4.3"
ordered-float = "5.1.0"
parking_lot = "0.12.5"
pyo3 = "0.28.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
serde_repr = "0.1.20"
sha1 = "0.10.6"
smallvec = { version = "1.15.1", features = ["serde"] }
strum = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.41"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
lto = true
