[package]
name = "aprs-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
fnv = { workspace = true }
hashers = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
smallvec = { workspace = true }
