[package]
name = "aprs-server"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["path_to_error"]
path_to_error = ["serde_path_to_error"]

[dependencies]
aprs-pickle = { workspace = true }
aprs-proto = { workspace = true }
aprs-server-core = { workspace = true }
aprs-value = { workspace = true }
bitflags = { workspace = true }
bstr = "1.12.1"
byteorder = "1.5.0"
bytes = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
fnv = { workspace = true }
format_serde_error = "0.3.0"
futures = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true, optional = true }
serde_tuple = "1.1.2"
sha1 = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-tungstenite = { workspace = true }
uuid = { version = "1.18.1", features = ["serde"] }
zip = "6.0.0"
serde_with = "3.15.1"
levenshtein = "1.0.5"
tracing = { workspace = true }
# Locked to 0.3.19 because of https://github.com/tokio-rs/tracing/issues/3378
tracing-subscriber = "=0.3.19"
color-eyre = "0.6.5"
tracing-error = "0.2.1"
tempfile = "3.23.0"
rmp-serde = "1.3.0"
zstd = "0.13.3"
litemap = { version = "0.8.0", features = ["serde"] }
hashers = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
