[package]
name = "aprs-value"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
eyre = { workspace = true }
hashers = { workspace = true }
indexmap = { workspace = true }
num = { workspace = true }
ordered-float = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
itertools.workspace = true

[dev-dependencies]
num = { workspace = true, features = ["serde"] }
ordered-float = { workspace = true, features = ["serde"] }
pyo3 = { workspace = true, features = ["auto-initialize", "num-bigint"] }
serde = { workspace = true }
strum = { workspace = true, features = ["derive"] }
