[package]
name = "aprs"
version = "0.1.0"
edition = "2024"
default-run = "aprs"

[dependencies]
aprs-server = { workspace = true }
aprs-tools = { workspace = true }
aprs-utils = { workspace = true }
aprs-web-host = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
